[gd_scene load_steps=3 format=3 uid="uid://bixw4ftugu6gr"]

[ext_resource type="Script" path="res://Scenes/note_system/note_system.gd" id="1_3qwnt"]
[ext_resource type="PackedScene" uid="uid://b572r5ogjp4eh" path="res://Scenes/note_area/note_area.tscn" id="2_ijum2"]

[node name="NoteSystem" type="Node2D"]
script = ExtResource("1_3qwnt")

[node name="NoteArea" parent="." instance=ExtResource("2_ijum2")]

[node name="MarkerNoteArea" type="Marker2D" parent="."]
position = Vector2(1220, 0)

[node name="TimerNote" type="Timer" parent="."]
wait_time = 1.5
autostart = true

[node name="NoteContainer" type="Node2D" parent="."]

[connection signal="timeout" from="TimerNote" to="." method="_on_timer_note_timeout"]
